--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="C:\Users\navi1\Desktop\web development\html personal site\NATHASHA-modified.png" alt="Nathasha Profile Picture" width="150" height="150"></td>
+      <td> <img src="NATHASHA-modified.png" alt="Nathasha Profile Picture" width="150" height="150"></td>
       <td>  <h1>Nathasha Vipin</h1>
         <p><em>Student at <strong><a href="https://www.cethalassery.ac.in/">College of Engineering Thalassery</a></strong></em></p>
         <p>I am a student and I edit videos for fun.
