--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="https://scontent.fccj3-1.fna.fbcdn.net/v/t39.30808-6/404017225_3557150291173129_5417685008005674831_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=8bPXFstRMBMAX9hbZ_H&_nc_oc=AQkM-eTjfjDAi56hWMllTM4Pjzc7pnMQcjgv_YiZ5IJl54HSAsbwKNncRcUA-RRzz38&_nc_ht=scontent.fccj3-1.fna&oh=00_AfBfwCc6B7lyhzgpv3OnjxzjWPsxGstFIoNRXtDdfMFW5w&oe=655ED67D" alt="Nathasha Profile Picture" width="150" height="150"></td>
+      <td> <img src="NATHASHA-modified.png" alt="Nathasha Profile Picture" width="150" height="150"></td>
       <td>  <h1>Nathasha Vipin</h1>
         <p><em>Student at <strong><a href="https://www.cethalassery.ac.in/">College of Engineering Thalassery</a></strong></em></p>
         <p>I am a student and I edit videos for fun.
