--- a/hobbies.html
+++ b/hobbies.html
@@ -6,6 +6,7 @@
     <title>My Hobbies</title>
 </head>
 <body>
+    <h3>My Hobbies</h3>
   <ol>
     <li><a href="https://m.media-amazon.com/images/I/81c-DnRCb8L._AC_UF1000,1000_QL80_.jpg"> Novels</a></li>
     <li><a href="https://www.youtube.com/watch?v=n0TTcu89AC8">Listening to Music</a></li>
